2006-04-13 [colin]	2.1.0cvs40

	* src/plugins/spamassassin/spamassassin_gtk.c
		Fix missing set_text on unix socket

2006-04-13 [wwp]	2.1.0cvs39

	* manual/fr/advanced.xml
	* manual/fr/glossary.xml
		applied new spam/ham/email lexicon (pourriel, courriel)

2006-04-13 [paul]	2.1.0cvs38

	* src/plugins/pgpmime/plugin.c
		remove the mention of S/MIME from the
		description. This is now handled by the
		S/MIME plugin.

2006-04-13 [paul]	2.1.0cvs37

	* src/prefs_msg_colors.c
		rework dialog
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
		add a tooltip to the colour selector buttons

2006-04-13 [wwp]	2.1.0cvs36

	* manual/advanced.xml
	* manual/glossary.xml
	* manual/handling.xml
	* manual/keyboard.xml
	* manual/plugins.xml
	* manual/starting.xml
	* manual/fr/account.xml
	* manual/fr/ack.xml
	* manual/fr/addrbook.xml
	* manual/fr/advanced.xml
	* manual/fr/faq.xml
	* manual/fr/glossary.xml
	* manual/fr/gpl.xml
	* manual/fr/handling.xml
	* manual/fr/intro.xml
	* manual/fr/keyboard.xml
	* manual/fr/plugins.xml
	* manual/fr/starting.xml
	* manual/fr/sylpheed-claws-manual.xml
		fixes to the manuals:
		 - summaryview -> Message List (same in French)
		 - translate key names
		 - fix French punctuation, use non-breakable spaces when
		   necessary, don't use &thinsp; which is not portable
		 - tell what maildir and mbox formats we support

2006-04-12 [wwp]	2.1.0cvs35

	* src/prefs_toolbar.c
		unified a replace button more,
		patch by Fabien Vantard <fzzzzz@gmail.com>.

2006-04-12 [wwp]	2.1.0cvs34

	* src/prefs_common.c
	* src/prefs_msg_colors.c
		make default color labels translatable,
		patch from Fabien Vantard <fzzzzz@gmail.com>,
		thanks to Tim <timbrain@post.cz> for reporting.

2006-04-12 [wwp]	2.1.0cvs33

	* manual/glossary.xml
	* manual/intro.xml
	* manual/plugins.xml
	* manual/starting.xml
	* manual/sylpheed-claws-manual.xml
	* manual/fr/.cvsignore
	* manual/fr/account.xml
	* manual/fr/ack.xml
	* manual/fr/addrbook.xml
	* manual/fr/advanced.xml
	* manual/fr/faq.xml