@@ -1,3 +1,10 @@
+2006-04-13 [colin]	2.1.0cvs41
+
+	* src/common/ssl_certificate.c
+	* src/common/ssl_certificate.h
+	* src/gtk/sslcertwindow.c
+		Warn on expired certs, and display the expiration date
+
 2006-04-13 [colin]	2.1.0cvs40
 
 	* src/plugins/spamassassin/spamassassin_gtk.c
